# terminal-studio

./: .gitignore  AI Studio.code-workspace  AUDIT.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  FEATURES.md  LICENSE  README.md  THIRD_PARTY_LICENSES.md  build.rs  deny.toml  justfile  terminal-studio.code-workspace
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
assets/: icon.icns
docs/superpowers/plans/: 2026-06-03-merge-conflict-resolution.md  2026-06-05-claude-session-resume.md
docs/superpowers/specs/: 2026-06-03-merge-conflict-resolution-design.md  2026-06-05-claude-session-resume-design.md
installer/: terminal-studio.iss
packaging/homebrew/: terminal-studio.rb
packaging/linux/: control  copyright  terminal-studio.desktop
packaging/macos/: Info.plist
scripts/: install.ps1  install.sh  release.ps1  release.sh
src/: app.rs  editor_group.rs  file_search_worker.rs  keybindings.rs  logging.rs  main.rs  md_detector.rs  pane_tree.rs  search.rs  search_worker.rs  shortcuts.rs  single_instance.rs  syntax.rs  sys_monitor.rs  theme.rs  updater.rs  url_detector.rs  util.rs  workspace.rs
src/app/: claude_session.rs  closed_sessions.rs  conflict_parser.rs  diff_parser.rs  drag.rs  feedback.rs  file_browser.rs  git_cmd.rs  git_diff.rs  git_worker.rs  input.rs  labels.rs  markdown.rs  multi_window.rs  pane.rs  pane_state.rs  persistence.rs  scrollback_capture.rs  scrollback_inject.rs  session_state.rs  settings.rs  state.rs  title.rs  watcher.rs  worker_manager.rs  workspace_git_worker.rs  workspace_ui.rs
src/app/ui/: animation.rs  closed_sessions_picker.rs  command_palette.rs  conflict_resolver.rs  debounce.rs  dialogs.rs  left_panel.rs  mod.rs  pane_renderer.rs  search_bar.rs  settings_overlay.rs  status_bar.rs  tab_bar.rs  titlebar.rs
src/app/ui/left_panel/: context_menu.rs  mod.rs  session_list.rs  workspace_section.rs
src/git/: parser.rs
src/pty/: foreground.rs  foreground_worker.rs  mod.rs  reader.rs  shell_integration.rs
src/renderer/: mod.rs  terminal_pass.rs
src/terminal/: grid.rs  mod.rs  performer.rs  tests.rs
src/ui_kit/: buttons.rs  containers.rs  layout.rs  lists.rs  mod.rs  text.rs
tools/: gen_icons.rs
